--- a/详细系统架构.md
+++ b/详细系统架构.md
@@ -1,5 +1,5 @@
 # 以L2 cache为主的芯片架构设计
-- 芯片有以下几个模块
+## 芯片有以下几个模块
   - core(1~9)
     - 共9个核心，每个核心与核心之间通过noc 连接在一起，可以通过主核心来挂载好所有的控制器
      ![avatar](./picture/微信图片_20230922203118.jpg)
@@ -12,7 +12,7 @@
   - mem control
     - 内部含有目录
   - noc
-- 各模块主要部件及其机制
+## 各模块主要部件及其机制
   - L2 cache
     - tag tag的长度和有效位、lock位还需要商榷   dirty位
     - 两个bank
@@ -68,7 +68,7 @@
         - allocatable
     - 总体的框图
        ![avatar](./picture/noc处理器架构.png)
-- 具体的和通信协议有关的东西,
+## 具体的和通信协议有关的东西,
   - 尽量弄成一个flit就可以传输完一次通信的所有数据
   - 定义每次发送的数据都是以cache line为单位
   - 每次的包就包括包类型，数据，地址这几位，取消burst机制
